--- a/easy-bank.html
+++ b/easy-bank.html
@@ -6,7 +6,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Easybank</title>
   <link rel="stylesheet" href="easy-bank.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -23,10 +22,10 @@
           <span class="three"></span>
         </button>
         <ul class="navbar-nav">
-          <li><a href="#home">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
-          <li><a href="#blog">Blog</a></li>
+          <li><a href="#">Blog</a></li>
           <li><a href="#">Careers</a></li>
         </ul>
         <button class="btn-primary">Request Invite</button>
@@ -49,7 +48,55 @@
 
           <button class="btn-primary">Request Invite</button>
         </div>
+      </section>
+      <section class="service">
 
+        <h2 class="section-title">Why choose Easybank?</h2>
+
+        <p class="section-text">We leverage Open Banking to turn your bank account into your financial hub. Control
+          your finances like never before.</p>
+
+
+        <div class="service-card-group">
+
+
+          <div class="service-card">
+            <img src="./images/icon-online.svg" alt="Icon for online banking" class="card-icon">
+
+            <h3 class="card-title">Online Banking</h3>
+
+            <p class="card-text">Our modern web and mobile applications allow you to keep track of your finances
+              wherever you are in the world.</p>
+          </div>
+
+          <div class="service-card">
+            <img src="./images/icon-budgeting.svg" alt="Icon for simple budgeting" class="card-icon">
+
+            <h3 class="card-title">Simple Budgeting</h3>
+
+            <p class="card-text">See exactly where your money goes each month. Receive notifications when you’re
+              close to hitting your limits.</p>
+          </div>
+
+          <div class="service-card">
+            <img src="./images/icon-onboarding.svg" alt="Icon for Fast Onboarding" class="card-icon">
+
+            <h3 class="card-title">Fast Onboarding</h3>
+
+            <p class="card-text">We don’t do branches. Open your account in minutes online and start taking control
+              of your finances right away.
+            </p>
+          </div>
+
+          <div class="service-card">
+            <img src="./images/icon-api.svg" alt="Icon for Open API" class="card-icon">
+
+            <h3 class="card-title">Open API</h3>
+
+            <p class="card-text">Manage your savings, investments, pension, and much more from one account. Tracking
+              your money has never been easier.</p>
+          </div>
+        </div>
       </section>
     </main>
     <script src="./easy-bank.js"></script>
