--- a/easy-bank.html
+++ b/easy-bank.html
@@ -160,7 +160,43 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="wrapper-flex">
+        <div>
+          <img src="./images/logo-footer.svg" alt="" class="logo-img">
+          <div class="social-link">
+            <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-youtube"></ion-icon></a> 
+            <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-pinterest"></ion-icon></a>
+            <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+          </div>
+        </div>
+        <div class="footer-nav">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#blog">Blog</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="wrapper">
+        <button class="btn-primary">Request Invite</button>
+        <p class="copyright"> &copy; Easybank. All Rights Reserved </p>
+      </div>
+    </footer>
+
+    <div class="attribution">
+      Coded by <a href="#">Dinesh A</a>
+    </div>
+  </div>
     <script src="./easy-bank.js"></script>
-    
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
